testsuite/tests/parser/should_fail/pfail045.stderr
pfail045.alan:3:14: Error: Parse error on input `true'
	Cannot use comparison symbols in conditions

